test_suite/tests/ui/common/unknown_top_level_attribute.rs
use nutype::nutype;

#[nutype(validte)]
pub struct MaxPositionPercentage(i32);

fn main() {}
